# spark-arm

./: .env  .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  Makefile.backup  PROMPT.md  README.md  TODO.md  VERSIONS.md  build.sbt  debug copy.env  dev.env  docker-compose.yml  log  log4j2.xml  mvn.md  pyproject.toml  readme.md  requirements.txt  rsync-ignore.txt  tag  todo.md  versions.sh
.cursor/rules/: docker-commands.mdc  docker-rule.mdc
.github/workflows/: docker-build.yml  hive-build.yml
docker/: Dockerfile  versions.env  versions.sh
docker/conf/: hive-site.xml  log4j2.xml
docker/configs/: versions.yaml
docker/output/: Dockerfile.spark
docker/scripts/: create-spark-defaults.sh  download-jars.sh  download-spark.sh  install-hadoop-native.sh  install-hive.sh  install-verifier-deps.sh  logging.sh  setup-user.sh  start-hive.sh  start-master.sh  start-spark.sh  start-worker.sh  verify-urls.sh
docker/templates/: hive.j2  spark.j2
docker/utils/: version_config.py
docker_builder/: __init__.py  cli.py  config.py  env.py  renderer.py  template.py
hive/: Dockerfile  Makefile  README.md
hive/conf/: core-site.xml  hdfs-site.xml  hive-site.xml  log4j2.xml  (+2 more)
project/: plugins.sbt
scripts/: build-hadoop-native.sh  download-test-jars.sh  update-test-configmap.sh
spark-arm/: Chart.yaml  run.sh  values.yaml
tests/: Makefile  SparkOperations.scala  TestConnection.scala  TestSparkCluster.scala  build.sbt  build.sh  log4j2.properties  requirements.txt  run-local-tests.sh  run_test.sh  run_tests.sh  spark-shell-pod.yaml  test.scala  test_spark_cluster.py
(+47 files in other folders)
